--- a/test.ini
+++ b/test.ini
@@ -2,58 +2,9 @@
 base = "rss/"
 
 [source001]
-name = "reddit_notion.xml"
-url = "https://www.reddit.com/r/Notion.rss"
+name = "WRR.xml"
+url = "https://agupubs.onlinelibrary.wiley.com/action/showFeed?jc=19447973&type=etoc&feed=rss"
 max = "20"
-md5 = "8aa8e426a4ce0748ca497747583d6a1a"
-action = "auto"
-
-[source002]
-name = "reddit_animation.xml"
-url = "https://www.reddit.com/r/animation.rss"
-max = "20"
-md5 = "aefbdc32734c98e508e6bfd45e01f10e"
-action = "auto"
-
-[source003]
-name = "feedle_indiehackers.xml"
-url = "https://feedle.world/rss/?query=indiehackers"
-max = "20"
-md5 = "68079d061f22e5d87858c2d2019f1c28"
-action = "auto"
-
-[source004]
-name = "feedle_webhook.xml"
-url = "https://feedle.world/rss/?query=webhook"
-max = "20"
-md5 = "a34d6f47d4f511f90c08e903892d2aa6"
-action = "auto"
-
-[source005]
-name = "Artificial_intelligence_in.xml"
-url = "https://rsshub.app/telegram/channel/Artificial_intelligence_in"
-max = "20"
-md5 = "fce5db24b312ed79dfd6e860e8ace5a1"
-action = "auto"
-
-[source006]
-name = "reddit_automation.xml"
-url = "https://www.reddit.com/r/automation.rss"
-max = "20"
-md5 = "4226909b61d6fe7f33627f38f58358a0"
-action = "auto"
-
-[source007]
-name = "reddit_productivity.xml"
-url = "https://www.reddit.com/r/productivity.rss"
-max = "20"
-md5 = "38d13d860174fe9d35d78117a78329ef"
-action = "auto"
-
-[source008]
-name = "huggingface_blog.xml"
-url = "https://huggingface.co/blog/feed.xml"
-max = "20"
-md5 = "7fc3269bd5c66976651994a2d70187d7"
+md5 = "09ece07aceaf66b7709f26289c9e4da5"
 action = "auto"
 
